--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  #state management
   provider: ^6.0.1
+
+  #backend service
+  supabase_flutter: ^0.2.12
 
 dev_dependencies:
   flutter_test:
